fixed user name overflow and added icons to stuff

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -83,6 +83,18 @@
 	text-shadow: 1px 0px 0px #333333;
 }
 
+.overflow-hidden {
+	-o-text-overflow: ellipsis;
+	-icab-text-overflow: ellipsis;
+	-khtml-text-overflow: ellipsis;
+	-moz-text-overflow: ellipsis;
+	-webkit-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+/*************************** build card *******************************/
 .rounded {
 	height: 70px;
 	width: 124px !important;
@@ -102,22 +114,10 @@
 	margin-right: auto;
 }
 
-table.build-card tr td {
-	
-}
-
 .header div {
 	background: rgba(255, 255, 255, 0.7);
+	width: 116px;
 	color: #333;
-	-o-text-overflow: ellipsis;
-	-icab-text-overflow: ellipsis;
-	-khtml-text-overflow: ellipsis;
-	-moz-text-overflow: ellipsis;
-	-webkit-text-overflow: ellipsis;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
-	width: 112px;
 	padding: 3px;
 	-moz-border-radius-topright: 4px;
 	-webkit-border-top-right-radius: 4px;
@@ -125,6 +125,28 @@ table.build-card tr td {
 	-moz-border-radius-topleft: 4px;
 	-webkit-border-top-left-radius: 4px;
 	border-top-left-radius: 4px;
+}
+
+.build-number {
+	font-style: italic;
+	background: url("../images/gear-small.png") no-repeat left center;
+	padding-left: 14px;
+}
+
+.build-duration {
+	background: url("../images/clock-small.png") no-repeat left center;
+	padding-left: 14px;
+}
+
+.build-time {
+	background: url("../images/application-small-list-blue.png") no-repeat left center;
+	padding-left: 6px;
+}
+
+.build-user {
+	background: url("../images/user-small.png") no-repeat left center;
+	padding-left: 14px;		
+	width: 102px;
 }
 
 .build-card .build-body {
@@ -159,14 +181,6 @@ table.build-card tr td {
 	width: 16px;
 	height: 16px;
 	padding-right: 2px;
-}
-
-.build-card .build-number {
-	font-size: 2em;
-	font-weight: normal;
-	vertical-align: middle;
-	text-align: right;
-	width: 30px;
 }
 
 #pipelines {
@@ -230,9 +244,14 @@ tr.spacerRow td {
 	background-color: #8b8989;
 }
 
-.revision .buildNumber {
+.revision .build-number-pipeline {
 	padding-top: 0.25em;
 	font-size: 2em;
+}
+
+.build-number-pipeline span {
+	background: url("../images/gear.png") no-repeat left center;
+	padding-left: 18px;	
 }
 
 .SUCCESS {
